<resources>
    <string name="app_name">Qnews</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_picture">news picture</string>
    <string name="source_date">%s / %s</string>
    <string name="search_topics_and_articles">Search topics and articles</string>
    <string name="error">unexpected error occurred</string>
    <string name="loop">loop</string>
    <string name="field_is_empty">Field is empty</string>
    <string name="topic">topic</string>
    <string name="headlines">Headlines</string>
    <string name="world">World</string>
    <string name="recent_searches">Recent searches</string>
    <string name="main_icon">main_icon</string>
    <string name="get_back">get back</string>
    <string-array name="headlines">
        <item>Covid19</item>
        <item>Cryptocurrency</item>
        <item>War</item>
        <item>Climate</item>
        <item>BLM</item>
        <item>LGBT</item>
        <item>Games</item>
    </string-array>
    <string-array name="world">
        <item>Europe</item>
        <item>USA</item>
        <item>Russia</item>
        <item>China</item>
        <item>Asia</item>
        <item>Australia</item>
        <item>Africa</item>
    </string-array>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>