<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="56dp"
    android:orientation="horizontal">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:padding="16dp"
        >

        <ImageView
            android:id="@+id/imageViewGetBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            android:layout_gravity="center"
            android:contentDescription="@string/get_back"
            />
    </FrameLayout>

    <EditText
        android:id="@+id/editTextSearchNewsAndArticles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:hint="@string/search_topics_and_articles"
        android:layout_weight="1"
        android:textColor="@color/white"
        android:textColorHint="@color/light_gray"
        android:background="@null"
        android:inputType="textCapSentences"
        android:layout_gravity="center_vertical"
        android:fontFamily="@font/antqua_casual"
        android:importantForAutofill="no" />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/imageViewStartSearching"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/loop"
            android:src="@android:drawable/ic_menu_search" />
    </FrameLayout>

</LinearLayout>